# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  pyproject.toml
page_analyzer/controllers/: check_route.py  parsed_tags.py  parsed_url.py  routes.py
page_analyzer/models/: base_repo.py  check_repo.py  pool.py  repo.py
page_analyzer/templates/: index.html  url.html  urls.html
