[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "gunicorn>=23.0.0",
]

[tool.uv.workspace]
members = ["page_analyzer"]

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
